--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <aside style="display: inline-block;">
-    <iframe src="http://127.0.0.1:5500/2/ijsad.html" frameborder="0" height="500px"></iframe>
+    <iframe src="https://jashgusani123.github.io/Mainiframe/" frameborder="0" height="500px"></iframe>
     </aside>
     
     <iframe src="https://jashgusani123.github.io/Assignment13/" frameborder="0" height="500px" width="1020px"></iframe> 
